fix image alignment in imported eoc exercises

--- a/css/ccap-ap-biology.less
+++ b/css/ccap-ap-biology.less
@@ -19,6 +19,10 @@
   page-break-before: avoid;
 }
 
+.cnx-eoc .section.empty {
+  display: none;
+}
+
 .exercise {
   margin: 0.5em 0;
   font-size: 9.5pt;
@@ -27,6 +31,12 @@
   p {
     font-size: 9.5pt;
     font-family: @font-family-bio;
+  }
+
+  img {
+    display: block;
+    margin: 1em auto;
+    max-width: 6in;
   }
 }
 
